fixed first blog not showing up bug and adjusted some styling

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,6 +1,6 @@
-body {
+/*body {
     color: #777;
-}
+}*/
 
 .pure-img-responsive {
     max-width: 100%;
